This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0


- Updated embedded LibEventHandler version to 1.2.92 (AddOnVersion: 1292).

Version 1.6.75 : by Calamath
[LorePlay]:Greymoor support
- In the wilderness of Western Skyrim and the vast underworld, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Greymoor Chapter. Solitude, Morthal and Dusktown are now recognized as cities.
- Harrowstorm ritual sites are now recognized as same as Dolmens.
- Updated API version to 100031 (ESO 6.0.x : Greymoor)
- Updated embedded LibEventHandler version to 1.2.91 (AddOnVersion: 1291).

Version 1.6.74 : by Calamath
- Russian language support
- optional LibDebugLogger V2.x support
[IdleEmotes]:Fixed an unintended behavior of IdleEmotes. This is a known issue inherited from the LorePlay standard version.
- Addressed an issue that could cause the idle emote to play shortly after the player interaction ended.
- Changed the waiting time before playing the idle emote from 10 seconds to 20 seconds. You will be able to adjust the waiting time in future versions.
[LoreWear]:Adjusted location database.
- Addressed an issue that did not correctly recognize Hollow City in Coldharbour.
- Updated database for Dragonhold DLC. Black Heights in Southern Elsweyr will be recognized as a city.

Version 1.6.73 : by Calamath
[LoreWear]small optimizations for some unnatural movements in automatic wearing.
-- no longer changes outfits right after login.
-- no longer wearing your favorite wet suit during battles, even if you select "use wetsuit" option.
-- no longer wearing your favorite combat uniform while riding or swimming, even if you select "use combat uniform" option.