@@ -35,6 +35,8 @@ SafeAddString(SI_BINDING_NAME_LP_FORCE_EQUIP_ADVENTURE_OUTFIT, 	"Force Equip Adv
 SafeAddString(SI_BINDING_NAME_LP_TOGGLE_ALTERNATIVE_OUTFIT, 	"Toggle Prefered Outfits", 1)
 
 SafeAddString(SI_LOREPLAY_UI_WELCOME, 							"[LorePlay] Welcome to LorePlay, Soulless One!", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SUPPRESS_STARTUP_MESSAGE_NAME, 	"Suppress Startup Message", 1)
+SafeAddString(SI_LOREPLAY_PANEL_SUPPRESS_STARTUP_MESSAGE_TIPS, 	"Suppresses startup message.\n[account-wide settings]", 1)
 SafeAddString(SI_LOREPLAY_PANEL_SE_HEADER, 						"Smart Emotes", 1)
 SafeAddString(SI_LOREPLAY_PANEL_SE_DESCRIPTION, 				"Contextual, appropriate emotes to perform at the touch of a button.\nBy default, pressing performs an emote based on location. However, it adapts and conforms to many different special environmental situations along your travels as well.\n|cFF0000Don't forget to bind your SmartEmotes button!|r", 1)
 SafeAddString(SI_LOREPLAY_PANEL_SE_EDIT_SIGNIFICANT_CHAR_NAME, 	"Significant Other's Character Name", 1)
@@ -47,6 +49,8 @@ SafeAddString(SI_LOREPLAY_PANEL_IE_HEADER, 						"Idle Emotes", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_DESCRIPTION, 				"Contextual, automatic emotes that occur when you go idle or AFK (Not moving, not fighting, not stealthing).\n|cFF0000Don't forget to bind your IdleEmotes keypress for quick toggling!|r", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_SW_NAME, 					"Toggle IdleEmotes On/Off", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_SW_TIPS, 					"Turns on/off the automatic, contextual emotes that occur when you go idle or AFK.\n(Note: Disabling IdleEmotes displays all its settings as off, but will persist after re-enabling.)", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_IDLE_TIME_NAME, 				"Idle Time", 1)
+SafeAddString(SI_LOREPLAY_PANEL_IE_IDLE_TIME_TIPS, 				"Determines the wait time in seconds, until a given idle emote will be performed.\nDefault is 20 seconds.\n[account-wide settings]", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_EMOTE_DURATION_NAME, 		"Emote Duration", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_EMOTE_DURATION_TIPS, 		"Determines how long in seconds a given idle emote will be performed before switching to a new one.\nDefault is 30 seconds.", 1)
 SafeAddString(SI_LOREPLAY_PANEL_IE_PLAY_INST_IN_CITY_SW_NAME, 	"Can Play Instruments In Cities", 1)
